[package]
name = "detection"
version = "0.1.0"
authors = ["Hugo Peixoto <hugo.peixoto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
edge-detection = "0.2.5"
image = "0.23"
nalgebra = "0.27.1"
img_hash = "3.2.0"
base64 = "0.13.0"
v4l = "0.12.1"
rayon = "1.5.1"
kmeans_colors = "0.4.0"
